[TASK] Dark mode and fix registration

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+html {
+  background-color: #363636;
+}
 body {
   margin: 0;
   padding: 0;
